[package]
name = "lisp"
version = "0.1.0"
authors = ["saffronsnail"]

[lib]
name = "lispparse"
path = "src/lib.rs"

[[bin]]
name = "r7rs"
path = "src/repl.rs"

[dependencies]
# readline replacement
rustyline = "1.0.0"

# Combinatorial parsing library
nom = "^3.2"

# High-level bindings for gmp, mpfr, and mpc
rug = "0.9.2"
